# aigency-v1.0.0

./: .gitignore  Brewfile  Helicone-AI-Gateway-GitDiagram.html  README.md  SURVEY_AUTOMATION_SUMMARY.md  copy-agent-zero-scripts.sh  docker-compose.survey.yml  package.json  pnpm-lock.yaml  project_journal.md  turbo.json
.daytona/minimal/survey-automation/: .env.example  Dockerfile  README.md  pyproject.toml
.daytona/minimal/survey-automation/app/: __init__.py  agent.py  api.py  main.py
.daytona/minimal/survey-automation/scripts/: skyvern_script.py
02_REFS_PROTOTYPES/BrainCraft/: .pdm-python  README-01JSVE3PGFZK6AR9GHKF9DQH86.md  README.md  pyproject.toml  slim.report.json
02_REFS_PROTOTYPES/BrainCraft/backend/: .env.example  pyproject.toml
02_REFS_PROTOTYPES/BrainCraft/backend/src/: combined_main.py  config.py  simple_main.py
02_REFS_PROTOTYPES/BrainCraft/backend/src/api/: routes.py
02_REFS_PROTOTYPES/BrainCraft/backend/src/services/: ai_service.py  audio_service.py
02_REFS_PROTOTYPES/BrainCraft/docker/: backend.Dockerfile  docker-compose.yml
02_REFS_PROTOTYPES/BrainCraft/docker/dia/: Dockerfile  Dockerfile.fixed  api_server.py
02_REFS_PROTOTYPES/BrainCraft/docs/: dia_setup.md
02_REFS_PROTOTYPES/BrainCraft/frontend/components/: ChatMessage.tsx
02_REFS_PROTOTYPES/BrainCraft/frontend/utils/: speech.ts
02_REFS_PROTOTYPES/XPRT/apps/xprt-coder/: README.md  package.json  pyproject.toml
02_REFS_PROTOTYPES/XPRT/apps/xprt-voice/: README.md  package.json  pyproject.toml
02_REFS_PROTOTYPES/aigency_extract/: README.md  pyproject.toml
02_REFS_PROTOTYPES/aigency_extract/aigency_extract/: __init__.py
02_REFS_PROTOTYPES/aigency_extract/aigency_extract/app/: __init__.py  cli.py  tui.py
02_REFS_PROTOTYPES/aigency_extract/aigency_extract/data/: __init__.py  database.py  models.py
02_REFS_PROTOTYPES/aigency_extract/aigency_extract/utils/: __init__.py  article.py  extraction.py  patterns.py  youtube.py
02_REFS_PROTOTYPES/highlight_demos/: .env.example  .gitignore  3D_KNOWLEDGE_GRAPH_IMPLEMENTATION.md  AI_PROVIDERS_IMPLEMENTATION.md  COMPLETE_SETUP.md  MISTRAL_AGENT_ADDITION.md  PROJECT_OVERVIEW.md  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  test-ai.js
02_REFS_PROTOTYPES/highlight_demos/api/: main.py
02_REFS_PROTOTYPES/highlight_demos/app/: globals.css  layout.tsx  page.tsx
02_REFS_PROTOTYPES/highlight_demos/app/agents/: page.tsx
02_REFS_PROTOTYPES/highlight_demos/app/api/debug-env/: route.ts
02_REFS_PROTOTYPES/highlight_demos/app/api/test-all-providers/: route.ts
02_REFS_PROTOTYPES/highlight_demos/app/api/test-chat/: route.ts
02_REFS_PROTOTYPES/highlight_demos/app/api/test-providers/: route.ts
02_REFS_PROTOTYPES/highlight_demos/app/auth/signin/: page.tsx
02_REFS_PROTOTYPES/highlight_demos/app/knowledge-graph/: page.tsx
02_REFS_PROTOTYPES/highlight_demos/app/network/: page.tsx
02_REFS_PROTOTYPES/highlight_demos/components/: agent-card.tsx  agent-chat.tsx  agent-network-graph.tsx  knowledge-graph-3d.tsx  knowledge-graph-fallback.tsx  navigation.tsx
02_REFS_PROTOTYPES/highlight_demos/components/ui/: badge.tsx  button.tsx
02_REFS_PROTOTYPES/highlight_demos/db/: README.md  config.ts  seed.ts  types.ts  utils.ts
02_REFS_PROTOTYPES/highlight_demos/db/migrations/: 0000_mean_pandemic.sql
02_REFS_PROTOTYPES/highlight_demos/db/migrations/meta/: 0000_snapshot.json  _journal.json
02_REFS_PROTOTYPES/highlight_demos/db/schema/: enums.ts  index.ts
02_REFS_PROTOTYPES/highlight_demos/public/: index.html  manifest.json
02_REFS_PROTOTYPES/highlight_demos/scripts/: complete-setup.sh  setup-db.sh
02_REFS_PROTOTYPES/highlight_demos/src/highlight_demos/: App.css  App.js  agent_performance.py  api.py  index.css  index.js  main.py  nlp_system.py
02_REFS_PROTOTYPES/highlight_demos/src/highlight_demos/components/: KnowledgeGraph.jsx
02_REFS_PROTOTYPES/uXPRT/uxprt/: .pdm-python  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml
02_REFS_PROTOTYPES/uXPRT/uxprt/src/agent/: controllers.py  routes.py
02_REFS_PROTOTYPES/uXPRT/uxprt/src/app/: globals.css  layout.tsx  page.tsx
02_REFS_PROTOTYPES/uXPRT/uxprt/src/auth/: controllers.py  routes.py
02_REFS_PROTOTYPES/uXPRT/uxprt/src/data_analysis/: controllers.py  routes.py
02_REFS_PROTOTYPES/uXPRT/uxprt/src/db/: schema.sql
02_REFS_PROTOTYPES/uXPRT/uxprt/src/lib/: supabaseClient.ts
02_REFS_PROTOTYPES/uXPRT/uxprt/src/messages/: controllers.py  routes.py
02_REFS_PROTOTYPES/uXPRT/uxprt/src/projects/: controllers.py  models.py  routes.py
02_REFS_PROTOTYPES/uXPRT/uxprt/src/scaffolding/: routes.py
02_REFS_PROTOTYPES/uXPRT/uxprt/src/search/: controllers.py  routes.py
02_REFS_PROTOTYPES/uXPRT/uxprt/src/user/: controllers.py  models.py  routes.py
02_REFS_PROTOTYPES/uXPRT/uxprt/supabase/: config.toml
02_REFS_PROTOTYPES/uXPRT/uxprt/tests/auth/: test_auth.py
apps/api/: .pdm-python  main.py  pyproject.toml
apps/api/src/agent/: routes.py
apps/api/src/auth/: controllers.py  routes.py
apps/api/src/auth0/: auth.py
apps/api/src/code_generation/: controllers.py  routes.py
apps/api/src/contact/: controllers.py  routes.py
apps/api/src/data_analysis/: routes.py
apps/api/src/kanban/: controllers.py  routes.py
apps/api/src/messages/: routes.py
apps/api/src/preview/: controllers.py  routes.py
apps/api/src/projects/: controllers.py  routes.py
apps/api/src/scaffolding/: controllers.py  routes.py
apps/api/src/user/: controllers.py  routes.py
apps/extract/: .env.example  .gitignore  README.md  TUI_FIX_README.md  TUI_FIX_SUMMARY.md  analyze_tabs.py  fix_and_test.sh  fix_complete.py  fix_indentation.py  fix_tab_ids.py  fix_tab_issue.py  fix_tabs.py  fix_tui.py  package.json  pyproject.toml  rest_of_file.txt  run_tui.py  simple_fix.py  test_fix.py  test_fixed_tui.py  test_pytube.py  test_run.py  test_tab_switching.py  test_tui_fix.py  turbo.json
apps/extract/aigency_extract/: __init__.py
apps/extract/aigency_extract/app/: __init__.py  cli.py
apps/extract/src/aigency_extract/: __main__.py  tui_main.py
(+824 files in other folders)
