[tool.poetry]
name = "aigency-extract"
version = "0.1.0"
description = "Extract and organize insights from YouTube videos and articles"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.38.1"
typer = "^0.9.0"
pytube = "^15.0.0"
openai = "^1.3.0"
pydantic = "^2.4.2"
sqlite-utils = "^3.35"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[tool.poetry.scripts]
extract = "aigency_extract.app.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
