[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Antonio Reid", email = "read.musik@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.12", 
    "pydantic>=2.11.4", 
    "pydantic-settings>=2.1.0",
    "dotenv>=0.9.9", 
    "python-dotenv>=1.0.0",
    "langchain-mistralai>=0.2.10", 
    "langchain-google-genai>=2.1.4", 
    "langchain>=0.3.25",
    "openai>=1.0.0",
    "aiohttp>=3.8.0",
    "uvicorn>=0.27.0",
    "requests>=2.31.0"
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
tts = ["git+https://github.com/nari-labs/dia.git"]
