[project]
name = "xprt-coder"
version = "0.1.0"
description = "interface for xprt-coder"
authors = [
    {name = "Antonio Reid", email = "read.musik@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
