[project]
name = "xprt-voice"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Antonio Reid", email = "read.musik@gmail.com"},
]
dependencies = ["setuptools>=76.0.0", "cartesia-mlx>=0.0.1", "nanobind @ git+https://github.com/wjakob/nanobind.git@2f04eac452a6d9142dedb957701bdb20125561e4", "torch>=2.6.0", "torchaudio>=2.6.0", "accelerate>=1.5.1", "bitsandbytes>=0.45.3", "cached-path>=1.7.1", "click>=8.1.8", "datasets>=3.3.2", "ema-pytorch>=0.7.7", "hydra-core>=1.3.2", "jieba>=0.42.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true
